chore: stop tracking env.example files; update recent changes

--- a/.gitignore
+++ b/.gitignore
@@ -137,3 +137,9 @@ temp/
 *.njsproj
 *.sln
 *.sw?
+
+# Cursor/SpecStory workspace artifacts
+.cursor/rules/
+.specstory/
+frontend/env.example
+backend/env.example
