updated env examples

--- a/.gitignore
+++ b/.gitignore
@@ -141,8 +141,8 @@ temp/
 # Cursor/SpecStory workspace artifacts
 .cursor/rules/
 .specstory/
-frontend/env.example
-backend/env.example
 
 # Postman env (local secrets)
 qa/Cookify_API_Local.postman_environment.json
+
+# test files
